# CppMakeTupleTests

./: CMakeLists.txt  README.md  TupleTesting.cpp  evaluate.py
scripts/: formatting.sh
